Fix Overflow hover comment avatar

--- a/assets/css/disp_single.less
+++ b/assets/css/disp_single.less
@@ -10,7 +10,6 @@
       margin-bottom: 40px;
    }
 
-
    // Main Content
    // ======================================================================== /
    #main-content{
@@ -115,8 +114,6 @@
             padding-top: 30px;
             margin-top: 50px;
             border-top: 1px solid @bdr_bg;
-            overflow: hidden;
-
 
             .evo_comment__list_title {
                font-family: @font_title;
