--- a/style.css
+++ b/style.css
@@ -1129,7 +1129,6 @@ a {
   padding-top: 30px;
   margin-top: 50px;
   border-top: 1px solid #e4e4e4;
-  overflow: hidden;
 }
 .disp_single #main-content .evo_post #feedbacks .evo_comment__list_title,
 .disp_page #main-content .evo_post #feedbacks .evo_comment__list_title {
